# CmakeTemplate_Fortran

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: gempa.cmake  metis.cmake  mpi.cmake
config/: gnu.cmake  nvhpc.cmake
src/: CMakeLists.txt
src/app1/: CMakeLists.txt
src/app1/headers/: liblist.h  mpiEnvSet.h  outputfunc.h
src/app1/sources/: main.cpp  mpiEnvSet.cpp  outputfunc.cpp
src/app_fortran/: CMakeLists.txt
src/app_fortran/sources/: main.F90  mod_output.F90
src/lib1/: CMakeLists.txt
src/lib1/headers/: matrixFunc.h  vecFunc.h
src/lib1/sources/: matrixFunc.cpp  vecFunc.cpp
src/lib_fortran/: CMakeLists.txt
src/lib_fortran/sources/: lib_maths.F90
src/libfortran/: CMakeLists.txt
src/libfortran/sources/: lib_maths.F90
tests/: CMakeLists.txt
tests/test_lib1/: CMakeLists.txt
tests/test_lib1/headers/: liblist.h
tests/test_lib1/sources/: test.cpp
