project(lib_fortran)

file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_LIST_DIR}/*.F90)
set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/sources)

add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SRC_FILES})

add_definitions(-D__BUILD_VERSION__="${TEST_VERSION}")

set_target_properties(${PROJECT_NAME} PROPERTIES VERSION ${TEST_VERSION} SOVERSION ${TEST_VERSION_MAJOR})
set_target_properties(${PROJECT_NAME} PROPERTIES POSITION_INDEPENDENT_CODE ON)

set(${PROJECT_NAME}_INCLUDE_DIRS ${SRC_DIR} CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)

install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${SRC_FILES} DESTINATION include)
